--- a/JpPublicHolidays.Test/JpPublicHolidays.Test.csproj
+++ b/JpPublicHolidays.Test/JpPublicHolidays.Test.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{E45685E9-9673-45A7-A107-E301F4E55D34}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PublicHolidays.Test</RootNamespace>
-    <AssemblyName>PublicHolidays.Test</AssemblyName>
+    <RootNamespace>JpPublicHolidays.Test</RootNamespace>
+    <AssemblyName>JpPublicHolidays.Test</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
