--- a/nuget/JpPublicHolidays.nuspec
+++ b/nuget/JpPublicHolidays.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>JpPublicHolidays</id>
-        <version>1.0.2</version>
+        <version>1.0.3</version>
         <title>JpPublicHolidays</title>
         <authors>Kiyoaki Tsurutani</authors>
         <owners>Kiyoaki Tsurutani</owners>
@@ -11,7 +11,7 @@
         <iconUrl>https://raw.githubusercontent.com/kiyoaki/JpPublicHolidays.NET/master/nuget/icon.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>内閣府ホームページで公開されている「国民の祝日」CSVファイルを扱うためのライブラリです。</description>
-        <releaseNotes>アイコン追加</releaseNotes>
+        <releaseNotes>CSV形式変更に対応</releaseNotes>
         <copyright>Kiyoaki Tsurutani</copyright>
         <language>ja-JP</language>
         <dependencies>
@@ -21,6 +21,6 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="..\JpPublicHolidays\bin\Release\PublicHolidays.dll" target="lib\portable-net45+wp8+win8\PublicHolidays.dll" />
+        <file src="..\JpPublicHolidays\bin\Release\JpPublicHolidays.dll" target="lib\portable-net45+wp8+win8\JpPublicHolidays.dll" />
     </files>
 </package>
