--- a/JpPublicHolidays/JpPublicHolidays.csproj
+++ b/JpPublicHolidays/JpPublicHolidays.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.1.0</Version>
-    <AssemblyVersion>2.1.0.0</AssemblyVersion>
-    <FileVersion>2.1.0.0</FileVersion>
+    <Version>2.2.0</Version>
+    <AssemblyVersion>2.2.0.0</AssemblyVersion>
+    <FileVersion>2.2.0.0</FileVersion>
     <NeutralLanguage>ja</NeutralLanguage>
-    <PackageReleaseNotes>Add TargetFramework NET45</PackageReleaseNotes>
+    <PackageReleaseNotes>Improve timeout handling</PackageReleaseNotes>
     <Company>Kiyoaki Tsurutani</Company>
     <Authors>Kiyoaki Tsurutani</Authors>
     <Description>内閣府ホームページで公開されている「国民の祝日」CSVファイルを扱うためのライブラリです。</Description>
