--- a/samples/JpPublicHolidays.ConsoleApp.Net9/JpPublicHolidays.ConsoleApp.Net9.csproj
+++ b/samples/JpPublicHolidays.ConsoleApp.Net9/JpPublicHolidays.ConsoleApp.Net9.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JpPublicHolidays\JpPublicHolidays.csproj" />
+    <ProjectReference Include="..\..\JpPublicHolidays\JpPublicHolidays.csproj" />
   </ItemGroup>
 
   <ItemGroup>
