--- a/tests/JpPublicHolidays.Test/JpPublicHolidays.Test.csproj
+++ b/tests/JpPublicHolidays.Test/JpPublicHolidays.Test.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NextUnit" Version="1.2.0" />
+    <PackageReference Include="NextUnit" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
