--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,12 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v5
       with:
-        dotnet-version: |
-          8.0.x
-          9.0.x
-          10.0.x
+        dotnet-version: 10.0.x
 
     - name: Restore dependencies
       run: dotnet restore JpPublicHolidays.slnx
@@ -30,4 +27,4 @@ jobs:
       run: dotnet build JpPublicHolidays.slnx -c Release --no-restore
 
     - name: Test
-      run: dotnet test tests/JpPublicHolidays.Test.Net8/JpPublicHolidays.Test.Net8.csproj -c Release --no-build --verbosity normal
+      run: dotnet run --project tests/JpPublicHolidays.Test/JpPublicHolidays.Test.csproj -c Release --no-build
