--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,23 +20,9 @@ updates:
       include: "scope"
     # Group related package updates together
     groups:
-      microsoft-testing:
+      dependencies:
         patterns:
-          - "Microsoft.Testing.*"
-        update-types:
-          - "minor"
-          - "patch"
-      microsoft-codeanalysis:
-        patterns:
-          - "Microsoft.CodeAnalysis.*"
-        update-types:
-          - "minor"
-          - "patch"
-      test-frameworks:
-        patterns:
-          - "xunit"
-          - "xunit.*"
-          - "coverlet.*"
+          - "*"
         update-types:
           - "minor"
           - "patch"
