--- a/tests/JpPublicHolidays.Test/JpPublicHolidays.Test.csproj
+++ b/tests/JpPublicHolidays.Test/JpPublicHolidays.Test.csproj
@@ -1,15 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NextUnit" Version="1.6.2" />
+    <PackageReference Include="NextUnit" Version="1.6.6" />
   </ItemGroup>
 
   <ItemGroup>
